--- a/EmployeeApplication/Views/Employee/Create.cshtml
+++ b/EmployeeApplication/Views/Employee/Create.cshtml
@@ -25,7 +25,7 @@
                 <div class="col-md-10">
                     @*@Html.EditorFor(model => model.Prefix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Prefix, "", new { @class = "text-danger" })*@
-                    @Html.DropDownList("PrefixList", (IEnumerable<SelectListItem>)ViewBag.PrefixList)
+                    @Html.DropDownListFor(model=> model.PrefixSelected, (IEnumerable<SelectListItem>)ViewBag.PrefixList)
                 </div>
             </div>
             <div class="form-group">
@@ -59,7 +59,7 @@
                 <div class="col-md-10">
                     @*@Html.EditorFor(model => model.Prefix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Prefix, "", new { @class = "text-danger" })*@
-                    @Html.DropDownListFor(model=> model.language, (IEnumerable<SelectListItem>)ViewBag.SuffixList)
+                    @Html.DropDownListFor(model=> model.SuffixSelected, (IEnumerable<SelectListItem>)ViewBag.SuffixList)
                 </div>
             </div>
     
@@ -79,21 +79,44 @@
                 </div>
             </div>
     
-            <div class="form-group">
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.lang.Language, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.lang.Language, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DisplayFor(model => model.lang.Language, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.HiddenFor(model => model.lang.Language, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.lang.Language, "", new { @class = "text-danger" })
                 </div>
-            </div>
-    
-            <div class="form-group">
+            </div>*@
+
+            <table class="border border-white">
+                @for (var i = 0; i < Model.Language.Count; i++)
+                {
+                    <tr>
+                        <td class="col-md-3">
+                            @Html.HiddenFor(modelItem => Model.Language[i].Language)
+                            @Html.DisplayFor(modelItem => Model.Language[i].Language)
+                        </td>
+                        <td>
+                            @Html.EditorFor(modelItem => Model.Language[i].Read)
+                        </td>
+                        <td class="col-md-3">
+                            @Html.EditorFor(modelItem => Model.Language[i].Write)
+                        </td>
+                        <td class="col-md-3">
+                            @Html.EditorFor(modelItem => Model.Language[i].Speak)
+                        </td>
+                    </tr>
+                }
+
+            </table>
+
+            @*<div class="form-group">
                 @Html.LabelFor(model => model.lang.Read, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                
                     <div class="checkbox">
                         @Html.EditorFor(model => model.lang.Read)
                         @Html.ValidationMessageFor(model => model.lang.Read, "", new { @class = "text-danger" })
-                    </div>
+                   
                 </div>
             </div>
     
@@ -115,7 +138,7 @@
                         @Html.ValidationMessageFor(model => model.lang.Speak, "", new { @class = "text-danger" })
                     </div>
                 </div>
-            </div>
+            </div>*@
     
             <div class="form-group">
                 @Html.LabelFor(model => model.employee.Salary, htmlAttributes: new { @class = "control-label col-md-2" })
