--- a/EmployeeApplication/Views/Employee/Employee.cshtml
+++ b/EmployeeApplication/Views/Employee/Employee.cshtml
@@ -33,6 +33,9 @@
         <table class="table">
             <tr>
                 <th>
+                    @Html.DisplayNameFor(model => model.employee.Prefix)
+                </th>
+                <th>
                     @Html.DisplayNameFor(model => model.employee.FirstName)
                 </th>
                 <th>
@@ -41,9 +44,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.employee.LastName)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.employee.Prefix)
-                </th>
+
                 <th>
                     @Html.DisplayNameFor(model => model.employee.Suffix)
                 </th>
@@ -54,7 +55,24 @@
                     @Html.DisplayNameFor(model => model.employee.SecondaryAddress)
                 </th>
                 <th>
-                    @Html.Label("Languages")
+                    
+                    <table class="border border-white" style="width: 100%;">
+                        <tr>
+                            <th>
+                                Language
+                            </th>
+                            <th>
+                                Read
+                            </th>
+                            <th>
+                                Write
+                            </th>
+                            <th>
+                                Speak
+                            </th>
+                        </tr>
+                    </table>
+                
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.employee.Salary)
@@ -92,9 +110,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.employee.SecondaryAddress)
                     </td>
-                    @{
-                        int i = 0;
-                    }
+                   
                     <td>
                         <table class="border border-white" style="width: 100%;">
                                 @foreach (var language in item.Language)
