--- a/EmployeeApplication/Views/Employee/Create.cshtml
+++ b/EmployeeApplication/Views/Employee/Create.cshtml
@@ -10,13 +10,14 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Create</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 </head>
 <body>
     @using (Html.BeginForm("Create", "Employee", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
         
-        <div class="form-horizontal">
+        <div class="form-horizontal col-md-offset-2 col-md-6">
             <h4>Employee</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -25,7 +26,7 @@
                 <div class="col-md-10">
                     @*@Html.EditorFor(model => model.Prefix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Prefix, "", new { @class = "text-danger" })*@
-                    @Html.DropDownListFor(model=> model.PrefixSelected, (IEnumerable<SelectListItem>)ViewBag.PrefixList)
+                    @Html.DropDownListFor(model=> model.PrefixSelected, (IEnumerable<SelectListItem>)ViewBag.PrefixList, htmlAttributes: new { @class = "control-label col-md-2" })
                 </div>
             </div>
             <div class="form-group">
@@ -59,7 +60,7 @@
                 <div class="col-md-10">
                     @*@Html.EditorFor(model => model.Prefix, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Prefix, "", new { @class = "text-danger" })*@
-                    @Html.DropDownListFor(model=> model.SuffixSelected, (IEnumerable<SelectListItem>)ViewBag.SuffixList)
+                    @Html.DropDownListFor(model=> model.SuffixSelected, (IEnumerable<SelectListItem>)ViewBag.SuffixList, htmlAttributes: new { @class = "control-label col-md-2" })
                 </div>
             </div>
     
@@ -87,29 +88,47 @@
                     @Html.ValidationMessageFor(model => model.lang.Language, "", new { @class = "text-danger" })
                 </div>
             </div>*@
-
-            <table class="border border-white">
-                @for (var i = 0; i < Model.Language.Count; i++)
-                {
+    
+            <div>
+                <table class="border border-white">
                     <tr>
-                        <td class="col-md-3">
-                            @Html.HiddenFor(modelItem => Model.Language[i].Language)
-                            @Html.DisplayFor(modelItem => Model.Language[i].Language)
-                        </td>
-                        <td>
-                            @Html.EditorFor(modelItem => Model.Language[i].Read)
-                        </td>
-                        <td class="col-md-3">
-                            @Html.EditorFor(modelItem => Model.Language[i].Write)
-                        </td>
-                        <td class="col-md-3">
-                            @Html.EditorFor(modelItem => Model.Language[i].Speak)
-                        </td>
+                        <th>
+                            Language
+                        </th>
+                        <th>
+                            Read
+                        </th>
+                        <th>
+                            Write
+                        </th>
+                        <th>
+                            Speak
+                        </th>
                     </tr>
-                }
+                    @for (var i = 0; i < Model.Language.Count; i++)
+                {
+                        <tr>
+                            <td class="col-md-3">
+                                @Html.HiddenFor(modelItem => Model.Language[i].Language)
+                                @Html.DisplayFor(modelItem => Model.Language[i].Language)
+                            </td>
+                            <td>
 
-            </table>
+                                @Html.EditorFor(modelItem => Model.Language[i].Read)
+                            </td>
+                            <td class="col-md-3">
+                                @Html.EditorFor(modelItem => Model.Language[i].Write)
+                            </td>
+                            <td class="col-md-3">
+                                @Html.EditorFor(modelItem => Model.Language[i].Speak)
+                            </td>
+                        </tr>
+                    }
 
+                </table>
+
+            </div>
+            
             @*<div class="form-group">
                 @Html.LabelFor(model => model.lang.Read, htmlAttributes: new { @class = "control-label col-md-2" })
                 
